--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -182,6 +182,10 @@ allow 154.213.184.87;
 allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
+allow 154.213.185.133;
+allow 154.213.185.165;
+allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.216.16.13;
@@ -192,6 +196,7 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -306,11 +311,11 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.142.239.49;
+allow 185.149.146.193;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -931,6 +936,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1255,6 +1261,10 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1469,6 +1479,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
+allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1588,15 +1599,14 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1853,7 +1863,6 @@ allow 94.72.98.8;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
