--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -196,7 +196,6 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -316,6 +315,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -570,6 +570,7 @@ allow 185.7.33.146;
 allow 185.82.219.109;
 allow 188.165.200.97;
 allow 188.214.104.21;
+allow 188.239.191.25;
 allow 188.253.7.106;
 allow 188.68.36.28;
 allow 188.68.41.191;
@@ -664,13 +665,13 @@ allow 193.218.118.89;
 allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.36.132.21;
 allow 193.36.38.17;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
-allow 194.164.122.21;
 allow 194.233.174.56;
 allow 194.26.192.161;
 allow 194.26.192.72;
@@ -1181,7 +1182,6 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
 allow 2a01:5e0:36:c311::1;
@@ -1259,13 +1259,13 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
-allow 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1286,6 +1286,8 @@ allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
+allow 2a07:e042:1:181::1;
+allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
@@ -1488,7 +1490,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1585,12 +1586,12 @@ allow 2a12:dd47:8513::d;
 allow 2a12:dd47:8513::e;
 allow 2a12:dd47:8513::f;
 allow 2a13:d207:0:461::1;
+allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.135;
 allow 35.0.127.52;
 allow 37.114.41.119;
-allow 3.71.175.220;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.187.74.97;
@@ -1605,6 +1606,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1804,7 +1806,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
